--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: default
 title: FRC 3197 Coding Team
 ---
-<h1>{{ "Ich will sterben." | downcase }}</h1>
+<h1>{{ "Welcome to the 3197 Programming website! Enjoy the very inspiring and deep blog posts about programming." | downcase }}</h1>
